# Sophia-Core-Libraries

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  mainpage.md
.github/workflows/: doxygen.yml
docs/: custom.css  custom_dot_header  footer.html  header.html  mainpage.md
docs/drawio/: .$MonteCarloTreeSearch.drawio.bkp  MonteCarloTreeSearch.drawio
examples/monte_carlo/: CMakeLists.txt
examples/monte_carlo/tic_tac_toe/include/: CMakeLists.txt
examples/monte_carlo/tic_tac_toe/include/enums/: tile_state.h
examples/monte_carlo/tic_tac_toe/include/factories/: tic_tac_toe_factory.h
examples/monte_carlo/tic_tac_toe/include/models/: CMakeLists.txt  board.h  move.h  position.h  state.h
examples/monte_carlo/tic_tac_toe/include/tic_tac_toe/: common_aliases.h  fwd.h
examples/monte_carlo/tic_tac_toe/include/tic_tac_toe/enums/: alignment.h  line_type.h  symbol.h  tile_state.h
examples/monte_carlo/tic_tac_toe/include/tic_tac_toe/factories/: CMakeLists.txt  tic_tac_toe_factory.h
examples/monte_carlo/tic_tac_toe/src/: CMakeLists.txt  main.cpp
examples/monte_carlo/tic_tac_toe/src/factories/: CMakeLists.txt  tic_tac_toe_factory.cpp
examples/monte_carlo/tic_tac_toe/src/models/: CMakeLists.txt  board.cpp  bot.cpp  game.cpp  game_state.cpp  heuristic_rollout_strategy.cpp  human.cpp  move.cpp  player.cpp  position.cpp  state.cpp
examples/monte_carlo/tic_tac_toe/src/observer/: CMakeLists.txt  observer.cpp  subject.cpp
examples/monte_carlo/tic_tac_toe/tests/: CMakeLists.txt  simulation_tests.cpp
examples/monte_carlo/tic_tac_toe/tests/model_tests/: CMakeLists.txt  state_tests.cpp
html/: action_8cpp.html  action_8cpp__incl.dot  action_8cpp__incl.map  action_8cpp__incl.md5  action_8h.html  action_8h.js  action_8h__dep__incl.dot  action_8h__dep__incl.map  action_8h__dep__incl.md5  action_8h__incl.dot  action_8h__incl.map  action_8h__incl.md5  action_8h_source.html  action__base_8h.html  action__base_8h.js  action__base_8h__dep__incl.dot  action__base_8h__dep__incl.map  action__base_8h__dep__incl.md5  action__base_8h__incl.dot  action__base_8h__incl.map  action__base_8h__incl.md5  action__base_8h_source.html  alignment_8h.html  alignment_8h.js  alignment_8h__dep__incl.dot  alignment_8h__dep__incl.map  alignment_8h__dep__incl.md5  alignment_8h_source.html  annotated.html  annotated_dup.js  board_8cpp.html  board_8cpp__incl.dot  board_8cpp__incl.map  board_8cpp__incl.md5  board_8h.html  board_8h.js  board_8h__dep__incl.dot  board_8h__dep__incl.map  board_8h__dep__incl.md5  board_8h__incl.dot  (+1064 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_6.js  classes_7.js  classes_9.js  classes_c.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  (+62 more)
include/: library.h
include/logging/: colors.h  console_logger.h  ilogger.h
include/monte_carlo/: CMakeLists.txt  common_aliases.h  fwd.h  library.h  tree_search_algorithm.h
include/monte_carlo/factories/: CMakeLists.txt  tree_factory.h  tree_factory_interface.h
include/monte_carlo/models/: CMakeLists.txt  action.h  action_base.h  action_select_strategy_interface.h  node.h  node_base.h  node_base.tpp  random_action_strategy.h  random_rollout_strategy.h  rollout_strategy_interface.h
latex/: action_8cpp.tex  action_8cpp__incl.dot  action_8cpp__incl.md5  action_8h.tex  action_8h__dep__incl.dot  action_8h__dep__incl.md5  action_8h__incl.dot  action_8h__incl.md5  action_8h_source.tex  action__base_8h.tex  action__base_8h__dep__incl.dot  action__base_8h__dep__incl.md5  action__base_8h__incl.dot  action__base_8h__incl.md5  action__base_8h_source.tex  alignment_8h.tex  alignment_8h__dep__incl.dot  alignment_8h__dep__incl.md5  alignment_8h_source.tex  annotated.tex  board_8cpp.tex  board_8cpp__incl.dot  board_8cpp__incl.md5  board_8h.tex  board_8h__dep__incl.dot  board_8h__dep__incl.md5  board_8h__incl.dot  board_8h__incl.md5  board_8h_source.tex  bot_8cpp.tex  bot_8cpp__incl.dot  bot_8cpp__incl.md5  bot_8h.tex  bot_8h__dep__incl.dot  bot_8h__dep__incl.md5  bot_8h__incl.dot  bot_8h__incl.md5  bot_8h_source.tex  classAlignment.tex  classAlignment__coll__graph.md5  (+599 more)
src/: CMakeLists.txt
src/logging/: CMakeLists.txt  console_logger.cpp
src/monte_carlo/: CMakeLists.txt  library.cpp  tree_search_algorithm.cpp
src/monte_carlo/factories/: CMakeLists.txt  tree_factory.cpp
src/monte_carlo/models/: CMakeLists.txt  action.cpp  action_base.tpp  node.cpp  node_base.tpp  random_action_strategy.cpp
tests/: CMakeLists.txt  example.cpp
tests/monte_carlo/: CMakeLists.txt  example.cpp
tests/monte_carlo/library_tests/: CMakeLists.txt  hello_tests.cpp
tests/monte_carlo/mocks/: CMakeLists.txt
tests/monte_carlo/mocks/include/: CMakeLists.txt  mock_action.h  mock_action_select_strategy.h  mock_node.h  mock_rollout_strategy.h  mock_tree_factory.h
tests/monte_carlo/mocks/src/: CMakeLists.txt  mock_action.cpp  mock_action_select_strategy.cpp  mock_node.cpp  mock_rollout_strategy.cpp  mock_tree_factory.cpp
tests/monte_carlo/model_tests/: CMakeLists.txt  node_tests.cpp
tests/monte_carlo/model_tests/action_tests/: CMakeLists.txt  action_source_tests.cpp  action_target_tests.cpp  action_upper_confidence_bound_tests.cpp  monte_carlo_action_fixture.h
tests/monte_carlo/model_tests/node_tests/: CMakeLists.txt  backpropagate_tests.cpp  expand_tests.cpp  has_been_sampled_tests.cpp  is_leaf_node_tests.cpp  monte_carlo_nodes_fixture.h  name_tests.cpp  rollout_tests.cpp  select_best_action_tests.cpp  set_parent_tests.cpp  total_reward_tests.cpp  upper_confidence_bound_tests.cpp  value_tests.cpp  visit_count_tests.cpp
tests/monte_carlo/tree_search_algorithm_tests/: CMakeLists.txt  mock_action.h  mock_action_select_strategy.h  mock_node.h  mock_tree_factory.h  tree_search_algorithm_tests.cpp
(+12 files in other folders)
